--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -1846,7 +1846,7 @@ Our choices just limit the amount of oriented cycles in~$D_{\order{\pi}}$.
 \part{Diagonals of permutahedra}
 \label{part:diagonalsPermutahedra}
 
-In this second part, we study of the combinatorics of the diagonals of the permutahedra.
+In this second part, we study the combinatorics of the diagonals of the permutahedra.
 In \cref{sec:cellularDiagonals}, we first recall the definition and some known facts about diagonals of polytopes (\cref{subsec:cellularDiagonalsPolytopes}), which we immediately specialize to the classical permutahedron (\cref{sec:cellularDiagonalsPermutahedra}), and connect to \cref{part:multiBraidArrangements} to derive enumerative statements on the diagonals of permutahedra (\cref{subsec:enumerationDiagonalPermutahedra}).
 In \cref{sec:operadicDiagonals}, we consider two particular diagonals, the $\LA$ and $\SU$ diagonals (\cref{subsec:LASUdiagonal}), we show that these are the only two operadic diagonals which induce the weak order (\cref{subsec:operadicProperty}), and that they are isomorphic (\cref{subsec:isos-LA-SU}). 
 Using results from \cref{sec:facePoset,sec:cellularDiagonals}, we then characterize their facets in terms of paths in $(2,n)$-partition trees (\cref{subsec:facets-operadic-diags}), and their vertices as pattern-avoiding pairs of permutations (\cref{subsec:vertices-operadic-diags}).
@@ -1952,7 +1952,7 @@ Note that the geometric diagonal~$\triangle_{(P,\b{v})}$ only depends on the reg
 		\includegraphics[scale=.6]{diagonalSquarre4}
 	\end{tabular}
 	}}
-	\caption{The diagonals of the segment (top), the triangle (middle) and the squarre (bottom). For each of them, we have represented the thin diagonal of~$P$ (left, in blue) and the cellular diagonal of~$P$ (middle left, in red) both in~$P \times P$, and the polytopal subdivision of~$P$ (middle right) and the common refinement of the two copies of the normal fan of~$P$ (right) both in~$P$.}
+	\caption{The diagonals of the segment (top), the triangle (middle) and the square (bottom). For each of them, we have represented the thin diagonal of~$P$ (left, in blue) and the cellular diagonal of~$P$ (middle left, in red) both in~$P \times P$, and the polytopal subdivision of~$P$ (middle right) and the common refinement of the two copies of the normal fan of~$P$ (right) both in~$P$.}
 	\label{fig:examplesDiagonals1}
 \end{figure}
 
