--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -1932,6 +1932,7 @@ A \defn{geometric diagonal} of a polytope~$P$ is a diagonal of the form~$\triang
 \end{definition}
 
 Note that the geometric diagonal~$\triangle_{(P,\b{v})}$ only depends on the region of~$\mathcal{H}_P$ containing~$\b{v}$, see~\cite[Prop.~1.23]{LaplanteAnfossi}.
+As of terminology, note that the datum of a polytope together with a generic vector was called \emph{positively oriented polytope} in \cite{MasudaThomasTonksVallette,LaplanteAnfossi,LaplanteAnfossiMazuir}.
 
 \begin{figure}[p]
 	\centerline{\scalebox{1.25}{
